
8)  Don't look for an extension script for built-in actions.

9)  Apply Jesse Shrieve's patch for SNAT range.

10) Add -<family> to 'ip route del default' command.

11) Add three new columns to macro body.

12) Change 'wait4ifup' so that it requires no PATH

13) Allow extension scripts for accounting chains.

14) Allow per-ip LIMIT to work on ancient iptables releases.

Changes in Shorewall 4.4.1

1)  Deleted extra 'use ...IPAddrs.pm' from Nat.pm.

2)  Deleted superfluous export from Chains.pm.

3)  Added support for --persistent.

4)  Don't do module initialization in an INIT block.

5)  Minor performance improvements.

6)  Add 'clean' target to Makefile.

7)  Redefine 'full' for sub-classes.

8)  Fix log level in rules at the end of INPUT and OUTPUT chains.

9)  Fix nested ipsec zones.

10) Change one-interface sample to IP_FORWARDING=Off.

11) Allow multicast to non-dynamic zones defined with nets=.

12) Allow zones with nets= to be extended by /etc/shorewall/hosts
    entries.

13) Don't allow nets= in a multi-zone interface definition.

14) Fix rule generated by MULTICAST=Yes

15) Fix silly hole in zones file parsing.

16) Tighen up zone membership checking.

17) Combine portlist-spitting routines into a single function.

Changes in Shorewall 4.4.0

1)  Fix 'compile ... -' so that it no longer requires '-v-1'

2)  Fix rule generation for logging nat rules with no exclusion.

3)  Fix log record formatting.

4)  Restore ipset binding

5)  Fix 'upnpclient' with required interfaces.

6)  Fix provider number in masq file.

Changes in Shorewall 4.4.0-RC2

1)  Fix capabilities file with Shorewall6.

2)  Allow Shorewall6 to recognize TC, IP and IPSET

3)  Make 'any' a reserved zone name.

4)  Correct handling of an ipsec zone nested in a non-ipsec zone.

Changes in Shorewall 4.4.0-RC1

1)  Delete duplicate Git macro.

2)  Fix routing when no providers.

3)  Add 'any' as a SOURCE/DEST in rules.

4)  Fix NONAT on child zone.

5)  Fix rpm -U from earlier versions
