@@ -220,6 +220,10 @@ Shorewall 4.4.2
     a capabilities file should regenerate that file after installing
     4.4.2.
 
+9)  One unintended difference between Shorewall-shell and
+    Shorewall-perl was that Shorewall-perl did not support the MARK
+    column in action bodies. This has been corrected.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
