@@ -30,6 +30,8 @@ Changes in Shorewall 4.4.2
 
 14) Allow per-ip LIMIT to work on ancient iptables releases.
 
+15) Add 'MARK' column to action body.
+
 Changes in Shorewall 4.4.1
 
 1)  Deleted extra 'use ...IPAddrs.pm' from Nat.pm.
